[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m2ee-tools"
version = "8.0.1"
description = "CLI tool for managing Mendix application deployments on GNU/Linux"
requires-python = ">=3.6"
dependencies = [
    "requests",
    "pyyaml",
]

[project.optional-dependencies]
postgresql = ["psycopg2"]

[project.scripts]
m2ee = "m2ee.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E721",  # type comparison — intentional in legacy code
    "E741",  # ambiguous variable name — legacy code
]
