[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m2ee-tools"
dynamic = ["version"]
description = "CLI tool for managing Mendix application deployments on GNU/Linux"
license = "BSD-3-Clause"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyyaml",
]

[project.optional-dependencies]
postgresql = ["psycopg2"]

[project.urls]
Repository = "https://github.com/johlan456/m2ee-tools"

[project.scripts]
m2ee = "m2ee.cli:main"

[tool.setuptools.dynamic]
version = {attr = "m2ee.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E721",  # type comparison — intentional in legacy code
    "E741",  # ambiguous variable name — legacy code
]
